@@ -8,6 +8,7 @@ New features:
 ...G...... [ZBXNEXT-1528] added net.if.in, net.if.out and net.if.total item support on HP-UX platforms (igors)
 
 Bug fixes:
+..F....... [ZBX-6451] fixed displaying correct number of items and triggers for "Status of Zabbix" (Ivo)
 ...G...... [ZBX-6672] fixed windows agent performance counters being capped to 100 (wiper)
 A.F....... [ZBX-6808] fixed "Host metadata" field in actions and improved validation for action conditions (Ivo)
 ..F....... [ZBX-6825] fixed names of the added items, when editing graph (Guntis)
